# moe-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
lib/: liblz4.so.1
lib/ggml/: CTestTestfile.cmake  compile_commands.json  ggml-config.cmake  ggml-version.cmake
lib/ggml/examples/: CTestTestfile.cmake
lib/ggml/examples/gpt-2/: CTestTestfile.cmake
lib/ggml/examples/gpt-j/: CTestTestfile.cmake
lib/ggml/examples/magika/: CTestTestfile.cmake
lib/ggml/examples/mnist/: CTestTestfile.cmake
lib/ggml/examples/sam/: CTestTestfile.cmake
lib/ggml/examples/simple/: CTestTestfile.cmake
lib/ggml/examples/yolo/: CTestTestfile.cmake
lib/ggml/tests/: CTestTestfile.cmake
main/: CMakeLists.txt  test.cpp
main/test/: CMakeCache.txt
scripts/: build.sh  config.json  plot.py  results.csv  test.sh  test_run.sh
src/: build.sh  layer_timing.patch
src/models/: _layer.py  _perf.py  _prune.py  download.py  layer.sh  prune.sh  sparsity.py
test/: CMakeLists.txt  block.cpp  cache-gpu.cu  cacheline.cpp  compile_commands.json  csr.cpp  ggml_demo  graph.cpp  lz4.cpp  test.cpp  tmp-csr.cpp  warp.cu
test/gpu/: gpu-bench.cpp  gpu-test.cpp  gpu-utils.h
test/memory/: direct.cpp  memcpy.cpp
test/model/: main.cpp  model.h  task.h  task_cuda.cu
test/src/ggml/: ggml-config.cmake
test/threads/: pool.h
